10477 : section design with responsive & corrected alignment .

--- a/web/public/scss/_common.scss
+++ b/web/public/scss/_common.scss
@@ -45,6 +45,26 @@ body {
   color: map-get($colors, lightenBgColor);
 }
 
+/*scrollbar */
+.style-3::-webkit-scrollbar-track
+{
+  // box-shadow: inset 0 0 6px rgba(0,0,0,0.0);
+	// -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.0);
+	background-color: #f1f1f1;;
+}
+
+.style-3::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #f1f1f1;;
+}
+
+.style-3::-webkit-scrollbar-thumb
+{
+	background-color: #f1f1f1;
+}
+
+
 form {
   label {
     color: map-get($colors, grey03);
