--- a/web/public/scss/_projectOverview.scss
+++ b/web/public/scss/_projectOverview.scss
@@ -13,13 +13,21 @@
     color: map-get($colors , grey03 );
     font-size: 14px;
     text-transform: capitalize;
-    padding: 15px;
+    padding: 20px 25px;
+    margin-bottom: 30px;
     @include borderRadius(3px);
+    @include mdScreen {
+        padding: 20px 15px;
+    }
     .edit-btn {
         height: fit-content;
         margin-top: 7px;
         padding: 6px 25px 3px;
         border-width: 1px;
+        min-width: auto;
+        background: transparent;
+        color: #006a4d;
+        border-radius: 2px;
         &:focus {
             outline: none;
         }
@@ -35,23 +43,15 @@
         font-weight: 300;
         margin-bottom: 0;
     }
-    ul {
-        list-style: none;
-        padding: 0;
-        margin: 0 0 8px 0;
-        li {
-            position: relative;
-            padding-left: 15px;
-            margin-bottom: 5px;
-            &:before {
-                content: '';
-                position: absolute;
-                width: 8px;
-                height: 8px;
-                background: map-get($colors , darkGreen );
-                left: 0px;
-                top: 6px;
-            }
+    .hr {
+        border-top: 1px solid #c7ced3;
+        display: block;
+        margin: 10px 0 10px;
+    }
+    .project-info-desc {
+        p {
+            line-height: 16px;
+            font-size: 12px;
         }
     }
 }
